@@ -1,5 +1,11 @@
 2010-07-13  Tom Tromey  <tromey@redhat.com>
 
+	* gdb.python/py-prettyprint.c (struct arraystruct): New struct.
+	(main): Use it.
+	* gdb.python/py-prettyprint.exp (run_lang_tests): Add test.
+
+2010-07-13  Tom Tromey  <tromey@redhat.com>
+
 	* gdb.base/label.exp: New file.
 	* gdb.base/label.c: New file.
 
